# cipherpay-api

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  ROADMAP.md  SPEC.md  TESTNET_GUIDE.md  docker-compose.yml
.cargo-home/: .global-cache
.cursor/skills/cipherpay/: AGENTS.md  SKILL.md
.github/workflows/: audit.yml
docs/: AI_AGENTS.md  REFERRAL-OVERVIEW.html  REFERRAL-OVERVIEW.md  REFERRAL-PROGRAM.md  SCALABILITY.md
migrations/: 001_init.sql
scripts/: healthcheck.sh  seed_mock_events.sh  test_events.sh
src/: addresses.rs  config.rs  crypto.rs  db.rs  email.rs  main.rs  validation.rs
src/api/: admin.rs  auth.rs  billing_routes.rs  events.rs  invoice_routes.rs  invoices.rs  keys.rs  luma.rs  merchants.rs  mod.rs  passkey.rs  payment_links.rs  pos.rs  prices.rs  products.rs  rates.rs  sessions.rs  status.rs  subscriptions.rs  system.rs  tickets.rs  x402.rs
src/api_keys/: mod.rs
src/billing/: fee_ledger.rs  mod.rs  status.rs  types.rs
src/db/: bootstrap.rs  data_migrations.rs  maintenance.rs  scanner_state.rs  schema_tracking.rs
src/events/: mod.rs
src/invoices/: amounts.rs  matching.rs  mod.rs  pricing.rs  queries.rs  types.rs
src/luma/: mod.rs
src/merchants/: mod.rs
src/payment_links/: mod.rs
src/prices/: mod.rs
src/products/: mod.rs
src/scanner/: blocks.rs  decrypt.rs  invoice_detection.rs  mempool.rs  metrics.rs  mod.rs  ws.rs
src/sessions/: mod.rs
src/subscriptions/: mod.rs
src/tickets/: mod.rs
src/webhooks/: mod.rs
ui/: index.html
widget/: cipherpay.css  cipherpay.js
workshop/: code-reference.md  demo-script.md  dry-run-checklist.md  slides.html
(+89 files in other folders)
